[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openai-image-generator"
version = "0.1.0"
description = "A simple Python CLI project using the OpenAI Images API to generate images."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "jianghuancn" }
]
dependencies = [
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
openai-image-generator = "generate_image:main"
generate-image = "generate_image:main"

[tool.setuptools]
py-modules = ["generate_image"]
